<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cliqz.browser.helper.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/onboarding"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_boarding_toogle"
                android:id="@+id/onboarding_toggle"
                android:layout_weight="3"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_url"
            android:id="@+id/open_url_action"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_news_message_action"
            android:id="@+id/send_msg_action"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
